# SonOfAnton_Reddit_Violation_LLM_Classification

./: .pre-commit-config.yaml  Makefile  README.md  project_setup.txt  pyproject.toml  requirements.txt
src/: constants.py  train.py  utils.py
